# fastapi-nuxt3-graphql-sample

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt
backend/: Dockerfile  config.py  main.py  prestart.sh  pyproject.toml  schema.py  start-reload.sh  start.sh
backend/api/: v1.py
backend/api/endpoints/: auth.py  batch.py  book.py  user.py
backend/api/schema/: book.py
backend/db/: session.py
backend/depends/: auth.py  common.py  database.py
backend/functions/: __init__.py  auth.py  batch.py  exceptions.py  super_enum.py  utils.py
backend/gql/: context.py  resolvers.py  router.py  scalars.py  schema.py  types.py
backend/gql/resolvers/: books.py
backend/gql/types/: books.py  core.py
backend/models/: batch.py  book.py  core.py  token.py  user.py
backend/repositories/: base.py  book.py  user.py
backend/usecases/: book.py
frontend/: .eslintignore  .eslintrc.js  Dockerfile  README.md  nuxt.config.ts  package.json
frontend/assets/style/: main.scss  variables.scss
frontend/class/errors/: UnauthorizeError.ts
frontend/composables/api/: useAuthApi.ts.org  useCoreApi.ts
frontend/composables/common/: useArray.ts  useCookie.ts  useDate.ts  useValidation.ts
frontend/enums/: HttpMethod.ts
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/plugins/: dayjs.ts  primevue.ts  vuedatepicker.ts  vuetify.ts
frontend/server/plugins/: vuetify-fix.ts
frontend/types/: Status.ts  User.ts
frontend/types/api/: index.ts
frontend/vuetify_helpers/: defaults.ts  themes.ts
(+51 files in other folders)
